--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,16 @@
   font-family: Mantinia;
   src: url("../public/Mantinia\ CC\ Regular.ttf");
 }
+.loaderWrapper{
+  position: fixed;
+  z-index: 100000;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  height: 100vh;
+  width: 100vw;
+  background: white;
+}
